# Utility-YT-Video-Manager

./: .gitignore  LICENSE  README.md  pyproject.toml
deployment/: build_exe.py
src/yt/: diary.py  main.py  workers.py
src/yt/ui/: explorer_tab.py
tests/: conftest.py  test_diary.py  test_youtube_logic.py
