[project]
name = "yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
    "qtawesome>=1.4.0",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.3",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
yt = "yt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
